--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+header {
+  background-color: #F55A5A;
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  height: 55px;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+header > img {
+  width: 24px;
+  margin-right: 7px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header > h1{
+  font-size: 0.9rem;
+  font-weight: 500;
+  font-family: Inter;
 }
